--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="screen active" id="start-screen">
       <h1>Quiz Time!</h1>
       <p>Test your knowledge with these fun questions</p>
+      <p class="cheat">(if you try to cheat and leave the page to google the answer, you will be kicked from the quiz)</p>
       <button id="start-btn">Start Quiz</button>
     </div>
 
